# dw_refactor_agent

./: .gitignore  AGENTS.md  Makefile  commit_message.md  config.py  doris_sql.py  environment-py37.yml  naming_config.yaml  naming_config_enterprise.yaml  pyproject.toml  pytest.ini  python_coding_standards.md  scratch.py  sql_dev_standards.md
.githooks/: pre-commit
assess/: assess_middle_layer.py  assess_result_olist.json  assess_result_shop.json  assessment_context.py  asset_catalog.py  business_metadata.py  business_semantics_catalog.py  code_quality.py  context_builder.py  entity_metadata.py  lineage_graph.py  lineage_index.py  metric_detector.py  metric_result_finance_analytics.json  metric_result_shop.json  model_metadata_result_finance_analytics.json  model_metadata_result_shop.json  model_metadata_writer.py  report.py  result_model.py  scoped_plan.py  score_architecture.py  score_asset_completeness.py  score_depth.py  score_metadata_health.py  score_naming.py  score_reuse.py  scoring_config.py  scoring_utils.py  table_classifier.py  table_inspector.py
benchmarks/: __init__.py
config/: __init__.py  assets.py  core.py  naming.py
ddl_deriver/: ddl_deriver.py
docs/: assess_metadata_initialization.md  assess_rule_design.md  assess_scoring_guide.md  naming_config_syntax.md  python37_development.md  semantic_aware_verification_code_review.html
exec/: reinit_project.py  task_run.py
finance_analytics/: business_processes.yaml  generate_ods_data.py  naming_config.yaml
lineage/: AGENTS.md  asset_graph.py  formatters.py  import_lineage.py  job_dag.py  job_dag_shop.json  lineage.html  lineage_cli.py  lineage_data.json  lineage_data_finance_analytics.json  lineage_data_olist.json  lineage_data_shop.json  lineage_extractor.py  lineage_job.html  model.py  olist_lineage_qa_report.json  query.py  refresh_lineage_html.py  service.py  sql_task_facts.py  store.py  table_graph.py  task_cache.py  view.py
olist/: download_data.py  import_data.py  lineage.html  lineage_job.html
(+2402 files in other folders)
